--- a/styles/globals.css
+++ b/styles/globals.css
@@ -24,7 +24,7 @@ html.sr .load-hidden {
     @apply text-5xl leading-none tracking-root md:text-7xl text-center mx-2;
   }
   .title-second {
-    @apply text-xs leading-none font-vn font-bold tracking-wide text-center md:text-lg -ml-4;
+    @apply text-xs leading-none font-vn font-bold tracking-wide text-center md:-mt-1 md:text-lg -ml-4;
   }
   .normal-font-vn {
     @apply font-vn font-bold tracking-wide;
