--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,6 +6,14 @@
   --root-brown: rgb(196, 156, 97);
 }
 
+.invisible-scrollbar {
+  /* width */
+  ::-webkit-scrollbar {
+    width: 0px;
+    opacity: 0;
+  }
+}
+
 html.sr .load-hidden {
   visibility: hidden;
 }
@@ -18,5 +26,3 @@ html.sr .load-hidden {
 .yarl__root {
   --yarl__color_backdrop: rgba(0, 0, 0, 0.82);
 }
-
-
