--- a/styles/nprogress.css
+++ b/styles/nprogress.css
@@ -16,21 +16,21 @@
 }
 
 /* Fancy blur effect */
-/* #nprogress .peg {
+#nprogress .peg {
   display: block;
   position: absolute;
   right: 0px;
   width: 100px;
   height: 100%;
   box-shadow:
-    0 0 10px rgb(247, 247, 247),
-    0 0 5px rgb(247, 247, 247);
+    0 0 10px rgb(185, 133, 57),
+    0 0 5px rgb(185, 133, 57);
   opacity: 1;
 
   -webkit-transform: rotate(3deg) translate(0px, -4px);
   -ms-transform: rotate(3deg) translate(0px, -4px);
   transform: rotate(3deg) translate(0px, -4px);
-} */
+}
 
 /* Remove these to get rid of the spinner */
 #nprogress .spinner {
