update custom scrollbar

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -49,3 +49,19 @@ html.sr .load-hidden {
   transform: translateY(-24px);
   transition: all 0.2s ease-out;
 }
+
+/* custom scrollbar */
+::-webkit-scrollbar {
+  width: 8px;
+}
+::-webkit-scrollbar-track {
+  background-color: rgb(230, 230, 230);
+}
+::-webkit-scrollbar-thumb {
+  background-color: rgb(115, 115, 115);
+  border-radius: 9999px;
+  transition: background-color 0.15s ease;
+}
+::-webkit-scrollbar-thumb:hover {
+  @apply bg-root-brown;
+}
